--- a/src/frontend/src/assets/scss/blocks/pizza.scss
+++ b/src/frontend/src/assets/scss/blocks/pizza.scss
@@ -101,7 +101,7 @@
     background-image: url("~@/assets/img/filling-big/blue_cheese.svg");
   }
 
-  &--cheddarcheddar,
+  &--cheddar,
   &--cheddar.pizza__filling--second::before,
   &--cheddar.pizza__filling--third::after {
     background-image: url("~@/assets/img/filling-big/cheddar.svg");
